--- a/package.json
+++ b/package.json
@@ -1,30 +1,51 @@
 {
-  "name": "typescript",
+  "type": "module",
+  "name": "chess-controller",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "jest": {
+    "transform": {
+      "*.(ts|tsx)": "babel-jest"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
-    "fmt": "prettier . --write"
+    "fmt": "prettier . --write",
+    "test": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts",
+    "test:geometry": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts src/__test__/geometry/*"
   },
   "dependencies": {
+    "eslint-plugin-jest": "^29.0.1",
     "prettier": "^3.6.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.25.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "babel-jest": "^30.2.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "ts-jest": "^29.4.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
