--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prettier": "^3.6.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "ts-pattern": "^5.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
