--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "fmt": "prettier . --write",
-    "test": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts",
+    "test": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts --silent=false",
     "test:geometry": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts src/__test__/geometry/*"
   },
   "dependencies": {
