--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "preview": "vite preview",
     "fmt": "prettier . --write",
     "test": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts --silent=false",
-    "test:geometry": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts src/__test__/geometry/*"
+    "test:geometry": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts src/__test__/geometry/*",
+    "test:geometry::check": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts src/__test__/geometry/check.test.ts",
+    "test:geometry::move": "node --experimental-require-module  ./node_modules/.bin/jest --config ./jest.config.ts src/__test__/geometry/move.test.ts"
   },
   "dependencies": {
     "eslint-plugin-jest": "^29.0.1",
